Modelagem banco finalizado, criado os DTOS e criando os repositórios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gestao_projetos
 spring.datasource.username=root
 spring.datasource.password=marllon
 
+spring.jpa.hibernate.ddl-auto=update
